--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>customer</module>
       <module>fraud</module>
     <module>eureka-server</module>
+    <module>clients</module>
   </modules>
 
   <properties>
@@ -53,6 +54,16 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.orcunsancar</groupId>
+      <artifactId>clients</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
